--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -5,9 +5,9 @@
 
 button {
   color: #090909;
-  padding: 0.2em 0.9em;
-  font-size: 18px;
-  border-radius: 0.5em;
+  padding: 0.2em 0.7em;
+  font-size: 1em;
+  border-radius: 6px;
   /*NO ANDA */
   /* background: #68a36d75;
   background: #98c15b; */
