--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -1,20 +1,49 @@
-.itemContainer{
+.itemContainer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 0 1em 0 1em;
 }
 
-.cardItem{
+h3 {
+    text-align: left;
     padding: 1em;
 }
 
-.imgItem{
-    width: 10em;
-    height: auto;
-    border-radius: 5%;
+.cardContainter {
+    padding: 0.8em;
 }
 
-.buttonContainer{
+.cardItem {
+    padding: 0.2em;
+    border-radius: 12px;
+    box-shadow: 0px 0px 17px 1px rgba(17, 51, 85, 0.2);
+    -webkit-box-shadow: 0px 0px 17px 1px rgba(17, 51, 85, 0.2);
+    -moz-box-shadow: 0px 0px 17px 1px rgba(17, 51, 85, 0.2);
+    background: rgba(255, 255, 255, 0.25);
+    backdrop-filter: blur(9px);
+    -webkit-backdrop-filter: blur(9px);
+    border-radius: 10px;
+    border: 3px solid rgba(255, 255, 255, 0.18);
+}
+
+.cardItem:hover {
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+}
+
+.imgItem {
+    width: 10em;
+    height: auto;
+    border-radius: 6px;
+}
+
+.precio{
+    padding-left: 1em;
+    text-align: left;
+}
+
+.buttonContainer {
     display: flex;
     flex-direction: row;
 }
