--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -7,6 +7,7 @@ button {
   color: #090909;
   padding: 0.2em 0.7em;
   font-size: 1em;
+  text-decoration: none;
   border-radius: 6px;
   /*NO ANDA */
   /* background: #68a36d75;
