--- a/src/components/ItemList/Item.css
+++ b/src/components/ItemList/Item.css
@@ -15,6 +15,11 @@ h3 {
     padding: 0.8em;
 }
 
+.cardContainterDetail{
+    padding: 0.8em;
+    width: 25em;
+}
+
 .cardItem {
     padding: 0.2em;
     border-radius: 12px;
@@ -46,4 +51,5 @@ h3 {
 .buttonContainer {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
