--- a/src/components/ItemDetails/itemDetail.css
+++ b/src/components/ItemDetails/itemDetail.css
@@ -16,6 +16,8 @@ h3 {
 }
 
 .cardContainterDetail {
+    display: flex;
+    justify-content: center;
     padding: 0.8em;
     width: 25em;
 }
@@ -55,4 +57,3 @@ h3 {
     flex-direction: row;
     justify-content: center;
 }
-
