--- a/src/components/ItemDetails/itemDetail.css
+++ b/src/components/ItemDetails/itemDetail.css
@@ -1,8 +1,8 @@
 .itemContainer {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 0 1em 0 1em;
 }
 
@@ -45,6 +45,7 @@ h3 {
     width: 10em;
     height: auto;
     border-radius: 6px;
+    
 }
 
 .precio {
@@ -53,6 +54,12 @@ h3 {
 }
 
 .buttonContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.buttonIrCarrito{
     display: flex;
     flex-direction: row;
     justify-content: center;
