--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -12,7 +12,7 @@
 
 .navbar-brand {
     clip-path: circle(50% at 50% 50%);
-    width: 4em;
+    width: 4.7em;
     height: auto;
 }
 
@@ -25,11 +25,13 @@
 
 nav ul li {
     padding: 1em;
+    
 }
 
 nav ul li a {
     text-decoration: none;
     color: #252525;
+    font-size: 1em;
 }
 
 nav ul li a:hover {
@@ -56,7 +58,7 @@ nav ul li a:active {
 }
 
 #lblCartCount {
-    font-size: 15px;
+    font-size: 0.5em;
     background: #ff0000;
     color: #fff;
     padding: 0 5px;
